[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/TitleBackground/TitleBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://shared/themes/menu_theme.tres" type="Theme" id=2]
[ext_resource path="res://UI/Options/Options.gd" type="Script" id=3]
[ext_resource path="res://shared/fonts/OpenSans_SemiboldHeadline.tres" type="DynamicFont" id=4]
[ext_resource path="res://shared/img/logo.png" type="Texture" id=5]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleBackground" parent="." instance=ExtResource( 1 )]

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.2
anchor_right = 0.2
anchor_bottom = 1.0
margin_right = 369.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 2.0
margin_right = 367.0
margin_bottom = 720.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Rows" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 355.0
margin_bottom = 710.0

[node name="LogoMargin" type="MarginContainer" parent="PanelContainer/MarginContainer/Rows"]
margin_right = 345.0
margin_bottom = 80.0
custom_constants/margin_top = 20
custom_constants/margin_bottom = 10

[node name="Logo" type="TextureRect" parent="PanelContainer/MarginContainer/Rows/LogoMargin"]
margin_top = 20.0
margin_right = 345.0
margin_bottom = 70.0
rect_min_size = Vector2( 300, 50 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 84.0
margin_right = 345.0
margin_bottom = 125.0
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/Rows/MarginContainer"]
margin_right = 345.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 4 )
text = "Configuration"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="Label" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 129.0
margin_right = 345.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 4 )
text = "Sound"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 164.0
margin_right = 345.0
margin_bottom = 232.0
columns = 2

[node name="VolumeLabel" type="Label" parent="PanelContainer/MarginContainer/Rows/GridContainer"]
margin_right = 101.0
margin_bottom = 20.0
text = "Master Volume"

[node name="VolumeContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/Rows/GridContainer"]
margin_left = 105.0
margin_right = 345.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="MasterVolumeSlider" type="HSlider" parent="PanelContainer/MarginContainer/Rows/GridContainer/VolumeContainer"]
margin_right = 190.0
margin_bottom = 16.0
size_flags_horizontal = 3
value = 100.0

[node name="Volume" type="Label" parent="PanelContainer/MarginContainer/Rows/GridContainer/VolumeContainer"]
margin_left = 200.0
margin_right = 240.0
margin_bottom = 20.0
rect_min_size = Vector2( 40, 0 )
text = "100 %"
align = 2

[node name="FxVolume" type="Label" parent="PanelContainer/MarginContainer/Rows/GridContainer"]
margin_top = 24.0
margin_right = 101.0
margin_bottom = 44.0
text = "Effect Volume"

[node name="FxVolumeContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/Rows/GridContainer"]
margin_left = 105.0
margin_top = 24.0
margin_right = 345.0
margin_bottom = 44.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="FxVolumeSlider" type="HSlider" parent="PanelContainer/MarginContainer/Rows/GridContainer/FxVolumeContainer"]
margin_right = 190.0
margin_bottom = 16.0
size_flags_horizontal = 3
value = 100.0

[node name="Volume" type="Label" parent="PanelContainer/MarginContainer/Rows/GridContainer/FxVolumeContainer"]
margin_left = 200.0
margin_right = 240.0
margin_bottom = 20.0
rect_min_size = Vector2( 40, 0 )
text = "100 %"
align = 2

[node name="MusicVolume" type="Label" parent="PanelContainer/MarginContainer/Rows/GridContainer"]
margin_top = 48.0
margin_right = 101.0
margin_bottom = 68.0
text = "Music Volume"

[node name="MusicVolumeContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/Rows/GridContainer"]
margin_left = 105.0
margin_top = 48.0
margin_right = 345.0
margin_bottom = 68.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="MusicVolumeSlider" type="HSlider" parent="PanelContainer/MarginContainer/Rows/GridContainer/MusicVolumeContainer"]
margin_right = 190.0
margin_bottom = 16.0
size_flags_horizontal = 3
value = 100.0

[node name="Volume" type="Label" parent="PanelContainer/MarginContainer/Rows/GridContainer/MusicVolumeContainer"]
margin_left = 200.0
margin_right = 240.0
margin_bottom = 20.0
rect_min_size = Vector2( 40, 0 )
text = "100 %"
align = 2

[node name="MarginVideo" type="MarginContainer" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 236.0
margin_right = 345.0
margin_bottom = 277.0
custom_constants/margin_top = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Video" type="Label" parent="PanelContainer/MarginContainer/Rows/MarginVideo"]
margin_top = 10.0
margin_right = 345.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 4 )
text = "Video"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BorderlessWin" type="CheckButton" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 281.0
margin_right = 345.0
margin_bottom = 321.0
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Borderless Fullscreen Window"

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 325.0
margin_right = 345.0
margin_bottom = 650.0
size_flags_vertical = 3

[node name="BackMargin" type="MarginContainer" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 654.0
margin_right = 345.0
margin_bottom = 700.0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="PanelContainer/MarginContainer/Rows/BackMargin"]
margin_top = 10.0
margin_right = 80.0
margin_bottom = 36.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="PanelContainer/MarginContainer/Rows/GridContainer/VolumeContainer/MasterVolumeSlider" to="." method="_on_MasterVolumeSlider_value_changed"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/Rows/GridContainer/FxVolumeContainer/FxVolumeSlider" to="." method="_on_FxVolumeSlider_value_changed"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/Rows/GridContainer/MusicVolumeContainer/MusicVolumeSlider" to="." method="_on_MusicVolumeSlider_value_changed"]
[connection signal="toggled" from="PanelContainer/MarginContainer/Rows/BorderlessWin" to="." method="_on_BorderlessWin_toggled"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/BackMargin/BackButton" to="." method="_on_BackButton_pressed"]
